apps/nas/vl-downloader/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vl-downloader
  namespace: default
  labels:
    app.kubernetes.io/name: vl-downloader
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 3000
    targetPort: http
    protocol: TCP
  selector:
    app.kubernetes.io/name: vl-downloader
