apps/nas/vl-downloader/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vl-downloader
  namespace: default
  annotations:
    external-dns.alpha.kubernetes.io/target: gw.${domain_absolutist_it:=absolutist.it}
spec:
  parentRefs:
  - name: envoy-gw-private
    namespace: envoy-gateway-system
  hostnames:
  - "vl-downloader.${domain_absolutist_it:=absolutist.it}"
  - "vl-downloader.${domain_wahoo_li:=wahoo.li}"
  rules:
  - backendRefs:
    - name: vl-downloader
      port: 3000
